cluster/apps/docmost.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: docmost
    labels:
        name: docmost
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
---
# Redis
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: docmost
    labels:
        app: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            nodeSelector:
                kubernetes.io/hostname: talos-nst-2ck
            containers:
                - name: redis
                  image: redis:7-alpine
                  ports:
                    - containerPort: 6379
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: docmost-redis
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
---
apiVersion: v1
kind: Service
metadata:
    name: redis
    namespace: docmost
spec:
    ports:
        - port: 6379
          targetPort: 6379
    selector:
        app: redis
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
---
# Postgres
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: docmost
    labels:
        app: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            nodeSelector:
                kubernetes.io/hostname: talos-nst-2ck
            containers:
                - name: postgres
                  image: postgres:16-alpine
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                    - name: data
                      mountPath: /var/lib/postgresql/data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: docmost-db
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: docmost
spec:
    ports:
        - port: 5432
          targetPort: 5432
    selector:
        app: postgres
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
---
# Docmost
apiVersion: apps/v1
kind: Deployment
metadata:
    name: docmost
    namespace: docmost
    labels:
        app: docmost
spec:
    replicas: 1
    selector:
        matchLabels:
            app: docmost
    template:
        metadata:
            labels:
                app: docmost
        spec:
            nodeSelector:
                kubernetes.io/hostname: talos-nst-2ck
            containers:
                - name: docmost
                  image: docmost/docmost:latest
                  ports:
                    - containerPort: 3000
                      name: http
                  volumeMounts:
                    - name: data
                      mountPath: /app/data/storage
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: docmost-data
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
---
apiVersion: v1
kind: Service
metadata:
    name: docmost
    namespace: docmost
spec:
    ports:
        - port: 80
          targetPort: http
          protocol: TCP
          name: http
    selector:
        app: docmost
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: docmost
    namespace: docmost
    annotations:
        cert-manager.io/cluster-issuer: ca-issuer
spec:
    ingressClassName: nginx
    tls:
        - hosts:
            - docmost.eduuh.home
          secretName: docmost-tls
    rules:
        - host: docmost.eduuh.home
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: docmost
                        port:
                            name: http
sops:
    age:
        - recipient: age123qz4jtnncp3l87a722303xxvs7jf33melrt3m63kqp0r34304zsdfhlm4
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHhzSm0vZEFQMXdsZS9E
[...]
            dtMdHkStr/DQNuaANDw13JdMYPK3pxWL9jGHTmiQxWPpYnCleQIM3A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-13T20:24:53Z"
    mac: ENC[AES256_GCM,data:I9ENK9mA8Ss7R2JbUmYl1emKXKKO4mdtQTst6huXYu0Bp7ILPvnPR4A4BZMChl/ryy/Xcu1P/8SJvugmtMUANpaosPXqvlGIJBMxXPJFxa9NtD/bXJHp3ZgJC2Seodup4n00ZVQDJamHIyQ0Q42mndFNbxOApAqklN58I9wrHJw=,iv:unuSGvKuYRBGfpwSxkfhhU0MNs/WoGq2y1U4+o91kO8=,tag:6czxLg3MUZtzUwgXQScDpQ==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
