cluster/apps/glance.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
  labels:
    name: glance
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.4
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/config/glance.yml
              subPath: glance.yml
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: glance-config
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: glance
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - glance.eduuh.home
      secretName: glance-tls
  rules:
    - host: glance.eduuh.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 80
